--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.0",
+    "expo-image-picker": "^17.0.8",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
