--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "eas-cli": "^16.19.3",
     "expo": "~54.0.0",
     "expo-image-picker": "^17.0.8",
     "expo-location": "~19.0.7",
