--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-web-maps": "^0.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@expo/metro-config": "~54.0.2",
