--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eas-cli": "^16.19.3",
     "expo": "~54.0.0",
     "expo-image-picker": "^17.0.8",
+    "expo-intent-launcher": "^13.0.7",
+    "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react": "^0.544.0",
